19907
I catch strange type checker behavior that produce type error from nowhere.
```scala
object Cyclic {
  class Node[T]() {
    type Self = T
  }

  val nodeA = new Node[Int]()
  val nodeB = new NodeB(a => a)
  val nodeC = new NodeC(a => a)
  /*
  val nodeB = new NodeB(a => a + 1)
  val nodeC = new NodeC(a => a + 1)
  */
  val nodeD = new NodeD( (b,c) => b + c )

  class NodeB[T](fun : Function[nodeA.Self, T]) extends Node[T]
  class NodeC[T](fun : Function[nodeA.Self, T]) extends Node[T]
  class NodeD[T](fun : Function2[nodeB.Self, nodeC.Self, T]) extends Node[T]
}
```

The snipped produce following error:
```scala
CyclicAliasing.scala:98: error: cyclic aliasing or subtyping involving type Self
  val nodeD = new NodeD( (b,c) => b + c )
                          ^
CyclicAliasing.scala:98: error: cyclic aliasing or subtyping involving type Self
  val nodeD = new NodeD( (b,c) => b + c )
                            ^
two errors found
```

I could not reduce the example further. Small changes miraculously cure the code and it compiles. I gave two examples as comments. Small change *i => i*  with *i => i + 1* make type checker happy.
